@@ -1,4 +1,5 @@
 ======================
+    ADDED: synchronizer: ability to give more files in the file filter (ex. '*.cpp *.h')
     ADDED: Two single click rename (Total Commander rename)
     ADDED: The 3rd hand of krusader. click the litle arrow below the panel's scrollbar to see..
     ADDED: showing suid, sgid and sticky bits in the permissions column
